--- a/src/sass/pages/_cups.sass
+++ b/src/sass/pages/_cups.sass
@@ -125,6 +125,9 @@
 	&__title
 		margin-bottom: 20px
 		font-weight: 700
+	&__descr
+		+sm
+			font-size: 15px
 	&__row
 		margin: 0 -8px
 		font-size: 0
@@ -721,6 +724,8 @@
 		font-size: 20px
 		+md
 			font-size: 17px
+		+sm
+			font-size: 15px
 		&_last
 			max-width: 1015px
 			margin: 40px auto 0
