--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -260,6 +260,8 @@
 		display: flex
 		justify-content: space-between
 		margin: 30px 0 0
+		+sm
+			margin: 20px 0 0
 	&__side
 		width: 19%
 		+md
