--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,5 +1,5 @@
 body
-	min-width: 768px
+	min-width: 1024px
 	+f("psr", 18, 26)
 	color: $black
 	-webkit-font-smoothing: subpixel-antialiased
@@ -200,23 +200,29 @@ h1, h2, h3, h4, h5, h6
 	padding: 0 40px 0 10px
 	text-align: center
 	font-size: 19px
-	color: #fff
+	color: #00306B
 	background: #EEF5FC
 	border-bottom: 1px solid #E1EFF6
+	+md
+		font-size: 17px
+	+sm
+		font-size: 16px
 	&::after
 		content: ''
 		position: absolute
 		top: 0
 		right: 0
-		width: 37px
-		height: 37px
+		width: 36px
+		height: 36px
 		+ico('fav')
 	&:hover
 		background: #61CDFF
 		border-bottom-color: #FFC486
+		color: #fff
 	&:active
 		background: #1E4D80
 		border-bottom-color: #FF0000
+		color: #fff
 	&:hover::after
 		+ico('fav-hvr')
 	&:active::after
@@ -234,6 +240,18 @@ h1, h2, h3, h4, h5, h6
 	background: #28B0E2
 	border-bottom: 2px solid #E0E0E1
 	overflow: hidden
+	text-transform: uppercase
+	+md
+		min-width: 270px
+		height: 54px
+		padding: 0 55px 0 10px
+		line-height: 54px
+		font-size: 19px
+	+sm
+		height: 44px
+		padding: 0 33px 0 10px
+		line-height: 44px
+		font-size: 17px
 	&::after
 		content: ''
 		position: absolute
@@ -242,6 +260,12 @@ h1, h2, h3, h4, h5, h6
 		width: 73px
 		height: 73px
 		+ico('like')
+		+md
+			height: 54px
+			width: 54px
+		+sm
+			height: 44px
+			width: 44px
 	&:hover
 		background: #06B2F0
 		border-bottom-color: #FFBE77
