--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -277,7 +277,7 @@ h1, h2, h3, h4, h5, h6
 	&:active::after
 		+ico('like-act')
 
-.submit-btn
+.confirm-btn
 	position: relative
 	min-width: 380px
 	height: 75px
@@ -290,6 +290,18 @@ h1, h2, h3, h4, h5, h6
 	border-bottom: 2px solid #E0E0E1
 	overflow: hidden
 	text-transform: uppercase
+	+md
+		min-width: 320px
+		padding: 0 54px 0 10px
+		height: 54px
+		line-height: 54px
+		font-size: 21px
+	+sm
+		height: 44px
+		min-width: 270px
+		padding: 0 27px 0 10px
+		line-height: 44px
+		font-size: 17px
 	span
 		border-radius: 2px
 		border-bottom: 2px solid #2B99CC
@@ -297,8 +309,16 @@ h1, h2, h3, h4, h5, h6
 		content: ''
 		position: absolute
 		top: 0
-		right: -1px
-		+sr('subm')
+		right: 0
+		width: 74px
+		height: 73px
+		+ico('confirm')
+		+md
+			height: 52px
+			width: 53px
+		+sm
+			height: 42px
+			width: 43px
 	&:hover
 		background: #06B2F0
 		border-bottom-color: #FFBE77
@@ -310,9 +330,9 @@ h1, h2, h3, h4, h5, h6
 		span
 			border-bottom-color: #254478
 	&:hover::after
-		+sr('subm-hvr')
+		+ico('confirm-hvr')
 	&:active::after
-		+sr('subm-act')
+		+ico('confirm-act')
 
 .more-content-open
 	font-size: 18px
