--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -447,6 +447,12 @@
 		border-radius: 50%
 		text-align: center
 		line-height: 20px
+		+md
+			width: 20px
+			height: 20px
+			line-height: 14px
+		+sm
+			line-height: 16px
 		&::after
 			display: inline-block
 			width: 14px
@@ -457,10 +463,17 @@
 			transform: scale(.4)
 			opacity: 0
 			transition: .15s
+			+md
+				width: 10px
+				height: 10px
 	label
 		font-size: 19px
 		color: #000
 		cursor: pointer
+		+md
+			font-size: 17px
+		+sm
+			font-size: 15px
 	input
 		display: none
 	input:checked + label .check__circle::after
