--- a/src/sass/pages/_basket.sass
+++ b/src/sass/pages/_basket.sass
@@ -24,6 +24,8 @@
 		text-align: center
 		+md
 			padding-top: 30px
+		+sm
+			padding-top: 20px
 	&__title
 		margin-bottom: 35px
 		+f('ver', 22)
@@ -33,13 +35,15 @@
 			font-size: 19px
 		+sm
 			margin-bottom: 15px
-			font-size: 17px
+			font-size: 16px
 	&__form-group
 		&-label
 			font-size: 22px
 			color: #999999
 			+md
 				font-size: 19px
+			+sm
+				font-size: 17px
 			& + &
 				margin-top: 10px
 		& + &
@@ -148,7 +152,7 @@
 		&-descr
 			margin-bottom: 10px
 			+sm
-				font-size: 16px
+				font-size: 15px
 		&-message-wrap
 			position: relative
 			padding-left: 53px
@@ -320,6 +324,8 @@
 			text-align: center
 			+md
 				font-size: 19px
+			+sm
+				font-size: 17px
 			&-count
 				display: inline-block
 				+f('oss')
