--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -370,6 +370,8 @@
 		margin-bottom: 40px
 		text-align: center
 		color: #274F7F
+		+md
+			margin-bottom: 25px
 	&__list
 		display: flex
 	&__item
