--- a/src/sass/pages/_contacts.sass
+++ b/src/sass/pages/_contacts.sass
@@ -1,19 +1,35 @@
 .contacts
 	&__in
 		padding-bottom: 70px
+		+md
+			padding-bottom: 35px
+		+sm
+			padding-bottom: 20px
 	&__info
 		font-style: normal
 		+clr
 		& + &
 			padding-top: 50px
+			+md
+				padding-top: 35px
+			+sm
+				padding-top: 20px
 	&__info-data
 		float: left
 		width: percentage(530 / 1310)
 		padding-top: 15px
+		+md
+			width: 45%
 	&__info-title
 		margin-bottom: 45px
 		font-size: 27px
 		text-align: center
+		+md
+			margin-bottom: 30px
+			font-size: 23px
+		+sm
+			margin-bottom: 15px
+			font-size: 20px
 	&__info-mail
 		margin-bottom: 5px
 	&__info-mail a
@@ -33,17 +49,35 @@
 	&__info-map iframe
 		width: 100%
 		height: 450px
+		+sm
+			height: 350px
 	&__info-item
 		margin-top: 25px
 		font-size: 20px
+		+md
+			margin-top: 15px
+			font-size: 18px
+		+sm
+			font-size: 16px
 	&__info-text + &__info-text
 		margin-top: 35px
-		
+		+md
+			margin-top: 25px
+		+sm
+			margin-top: 15px
 	&__socials
 		padding: 40px 0
+		+md
+			padding: 25px 0
+		+sm
+			padding: 15px 0
 	&__socials-links
 		+f('psb', 22)
 		text-align: center
+		+md
+			font-size: 20px
+		+sm
+			font-size: 17px
 		a
 			color: #274F7F
 			text-decoration: underline
@@ -55,14 +89,25 @@
 		border-top: 1px solid #D1D1D1
 		border-bottom: 1px solid #D1D1D1
 		font-size: 20px
+		+md
+			font-size: 17px
+		+sm
+			padding: 20px 0
+			font-size: 16px
 		&-title
 			margin-bottom: 40px
 			+f('oss')
 			text-align: center
+			+md
+				margin-bottom: 20px
 		&-text
 			text-indent: 35px
 		
 	&_default
 		padding-left: 30px
 		padding-bottom: 45px
-		
+		+md
+			padding-left: 20px
+			padding-bottom: 30px
+		+sm
+			padding-left: 10px
