--- a/src/sass/pages/_entry-pages.sass
+++ b/src/sass/pages/_entry-pages.sass
@@ -1,9 +1,14 @@
 /* pictures
 	----------------------------------- */
 .pictures
-	padding: 0 0 30px
+	padding-bottom: 30px
+	+sm
+		padding-bottom: 20px
 	&__title
+		padding: 0 100px
 		text-align: center
+		+md
+			padding: 0 30px
 	&__descr
 		margin: 20px 0
 		text-indent: 40px
@@ -15,6 +20,8 @@
 			padding-top: percentage(344 / 1224)
 			&:not(:first-child)
 				margin-left: 0.5%
+				+md
+					margin-left: 0.2%
 			&:nth-child(1)
 				width: 22.1%
 			&:nth-child(2)
@@ -35,6 +42,11 @@
 			font-size: 20px
 			background: rgba(#000, .3)
 			text-transform: uppercase
+			+md
+				padding: 5px 10px
+				font-size: 17px
+			+sm
+				font-size: 14px
 			&_right
 				right: 0
 				left: auto
