--- a/src/sass/pages/_entry-pages.sass
+++ b/src/sass/pages/_entry-pages.sass
@@ -55,9 +55,13 @@
 	----------------------------------- */
 .clothes
 	padding: 0 0 40px
+	+md
+		padding: 0 0 15px
 	&__in
 		padding: 20px 0 0
 		+clr
+		+sm
+			padding: 10px 0 0
 	&__col
 		float: left
 		&:nth-child(1)
@@ -313,9 +317,3 @@
 		&-img
 			+coverdiv
 			+cover
-			
-/* photos
-	----------------------------------- */
-.photos
-	&__title
-		padding: 0
