--- a/src/templates/photos-page.jade
+++ b/src/templates/photos-page.jade
@@ -7,13 +7,9 @@ block content
 	+b.MAIN.page._default
 		+e.container.container
 			+e.bar
-				+b.breadcrumbs
-					+e.A.link(href='#!')
-						+icon('icon-house', 'breadcrumbs__icon')
-						= ' '
-						+e.SPAN Главная
-					+e.A.link.is-active(href='#!')
-						+e.SPAN Печать фотокниг и альбомов
+				-
+					var breadCrumbsList = [{text: 'Печать фотокниг и альбомов', active: 'is-active'}];
+				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
 					+e.SPAN Фотоальбомы. Печать, изготовление фотокниг
@@ -22,8 +18,8 @@ block content
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.photos.sect
-						+b.title-md.photos__title ПРЕДСТАВЛЯЕМ ВАМ САМЫЕ ОРИГИНАЛЬНЫЕ ТЕХНОЛОГИЧЕСКИЕ НОВИНКИ И НОВОВВЕДЕНИЯ ПРОИЗВОДСТВА ФОТОКНИГ. МЫ ИСПОЛЬЗУЕМ 3D ОБЛОЖКИ С ГОЛОГРАФИЕЙ, ЗЕРКАЛЬНЫЕ ОБЛОЖКИ, КОЖАНЫЕ МАТЕРИАЛЫ.
+					+b.SECTION.sect
+						+b.title-md ПРЕДСТАВЛЯЕМ ВАМ САМЫЕ ОРИГИНАЛЬНЫЕ ТЕХНОЛОГИЧЕСКИЕ НОВИНКИ И НОВОВВЕДЕНИЯ ПРОИЗВОДСТВА ФОТОКНИГ. МЫ ИСПОЛЬЗУЕМ 3D ОБЛОЖКИ С ГОЛОГРАФИЕЙ, ЗЕРКАЛЬНЫЕ ОБЛОЖКИ, КОЖАНЫЕ МАТЕРИАЛЫ.
 						+b.P.sect-descr Выбор материалов для изготовления фотокниг у нас действительно хорош! По вашему желанию мы можем предложить несколько типов и видов внутренних страниц (пластик, картон различной толщины и цветов).  У нас есть своя, неповторимая технология изготовления обложек и самих фотокниг, альбомы будут выглядеть аккуратно и оригинально. В наших моделях все продумано, от размеров отступов, до реализации дизайнерских разворотов из специального картона.
 						+b.benefits-list._default
 							+e.title Какие возможности и выгоды вы получаете заказав фотокниги у нас?
