--- a/src/templates/payment-page.jade
+++ b/src/templates/payment-page.jade
@@ -7,13 +7,9 @@ block content
 	+b.MAIN.page._default
 		+e.container.container
 			+e.bar
-				+b.breadcrumbs
-					+e.A.link(href='#!')
-						+icon('icon-house', 'breadcrumbs__icon')
-						= ' '
-						+e.SPAN Главная
-					+e.A.link.is-active(href='#!')
-						+e.SPAN Оплата
+				-
+					var breadCrumbsList = [{text: 'Оплата', active: 'is-active'}];
+				include components/_breadcrumbs
 
 				+e.bar-title
 					+e.SPAN Быстро, удобно, надёжно!
