--- a/src/templates/presents-page.jade
+++ b/src/templates/presents-page.jade
@@ -7,15 +7,9 @@ block content
 	+b.MAIN.page._default
 		+e.container.container
 			+e.bar
-				+b.breadcrumbs
-					+e.A.link(href='#!')
-						+icon('icon-house', 'breadcrumbs__icon')
-						= ' '
-						+e.SPAN Главная
-					+e.A.link(href='#!')
-						+e.SPAN Услуги фирмы
-					+e.A.link.is-active(href='#!')
-						+e.SPAN Изготовление подарков
+				-
+					var breadCrumbsList = [{text: 'Услуги фирмы'}, {text: 'Изготовление подарков', active: 'is-active'}];
+				include components/_breadcrumbs
 
 				+e.bar-title._has-icon
 					+e.SPAN Выбор вариантов подарков
