--- a/src/templates/components/_request.jade
+++ b/src/templates/components/_request.jade
@@ -18,22 +18,14 @@
 					+e.BUTTON(type="button").message-extend.js-message-extend
 						+icon('icon-arr-double', 'request__message-icon')
 				+e.send
-					+e.send-col
-						+e.send-add
-							+e.BUTTON(type="button").send-btn-add Добавить файл
-							+e.send-text Прикрепленные файлы:
-						+e.send-files
-							+e.send-item.decor._sm
-								+e.IMG(src="img/content/file-1.jpg")
-								+e.BUTTON(type='button').send-btn-close
-									+icon('icon-close','request__send-icon-close')
-								.decor__line
-							+e.send-item.decor._sm
-								+e.IMG(src="img/content/file-2.jpg")
-								+e.BUTTON(type="button").send-btn-close
-									+icon('icon-close','request__send-icon-close')
-								.decor__line
-						+e.send-message(style='display: none;') Письмо отправлено!
+					+b.send._request
+						+e.add
+							+e.LABEL.add-btn(for='upload-1') Добавить файл
+								+e.INPUT.add-input.js-upload-input(id='upload-1' type='file' accept='image/*' name='' multiple)
+							+e.add-text Прикрепленные файлы:
+
+						+e.files
+
 					+e.send-col
 						+b.BUTTON(type='submit').send-btn.request__send-btn Отправить
 						+e.DIV(style='margin: 15px auto 0; width: 260px; height: 47px; border: 2px dashed #000; font-size: 22px; text-align: center;') Место под каптчу
