--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -785,6 +785,7 @@
 		+xs
 			width: 59%
 	&__item
+		pointer-events: none
 		position: relative
 		display: inline-block
 		vertical-align: middle
@@ -827,6 +828,7 @@
 				border-width: 15px 15px 0 0
 				
 		&-cancel
+			pointer-events: all
 			position: absolute
 			right: -15px
 			top: -15px
