--- a/src/templates/components/_request.jade
+++ b/src/templates/components/_request.jade
@@ -18,7 +18,7 @@
 					+e.BUTTON(type="button").message-extend.js-message-extend
 						+icon('icon-arr-double', 'request__message-icon')
 				+e.send
-					+b.send._request
+					+b.send._request.js-send
 						+e.add
 							+e.LABEL.add-btn(for='upload-1') Добавить файл
 								+e.INPUT.add-input.js-upload-input(id='upload-1' type='file' accept='image/*' name='' multiple)
