--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -791,7 +791,6 @@
 		+xs
 			width: 59%
 	&__item
-		pointer-events: none
 		position: relative
 		display: inline-block
 		vertical-align: middle
@@ -834,7 +833,6 @@
 				border-width: 15px 15px 0 0
 				
 		&-cancel
-			pointer-events: all
 			position: absolute
 			right: -15px
 			top: -15px
@@ -857,10 +855,73 @@
 				+md
 					font-size: 10px
 			
+	&__message
+		text-align: center
+		&-text
+			display: inline-block
+			vertical-align: -13px
+			+f("ver", 20)
+			+md
+				font-size: 15px
+			+sm
+				font-size: 14px
+		&-icon
+			display: inline-block
+			vertical-align: middle
+			font-size: 50px
+			fill: #aec94d
 			
-	&_request
-		display: inline-block
-		vertical-align: top
+	&_order
+		margin-top: 25px
 		font-size: 0
-		white-space: nowrap
-		width: 60.36217%
+	&_order &__item
+		width: 100px
+		height: 90px
+		&:nth-child(2)
+			margin-right: 20px
+		&:nth-child(2) ~ *
+			margin-right: 20px
+			margin-top: 0
+		&:nth-child(6) ~ *
+			margin-top: 20px
+		.decor__line
+			+md
+				width: 83%
+		.decor__line:before
+			right: 0
+			border-width: 0 0 16px 15px
+		.decor__line:after
+			right: -17px
+			border-width: 16px 17px 0 0
+			background-color: #E0E0E0
+	&_order &__item-cancel
+		right: -15px
+		top: -15px
+		width: 24px
+		height: 24px
+		border: 2px solid #fff
+		
+	&_order &__add
+		margin-right: 25px
+	&_order &__add-btn
+		position: relative
+		display: block
+		width: 100px
+		height: 90px
+		min-height: 0
+		padding: 5px 0 0
+		color: #fff
+		text-transform: uppercase
+		text-align: center
+		background: #B9C0C9
+		border-bottom: none
+		+f('ver', 13)
+		&:hover
+			background: darken(#B9C0C9, 10)
+		&::after
+			left: calc(50% - 18px)
+			width: 36px
+			height: 34px
+			bottom: 10px
+	&_order &__files
+		width: calc(100% - 125px)
