--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -1058,7 +1058,7 @@
 		align-items: flex-end
 	&__amount
 		padding: 0 0 0 25px
-		background: #EEF5FC
+		background: #f4f8fd
 		+md
 			padding: 0 0 0 10px
 	&__amount-text
@@ -1076,7 +1076,7 @@
 		margin-left: 16px
 		padding: 8px 15px 8px 30px
 		border-radius: 30px 0 0 30px
-		background-color: #EEF5FC
+		background-color: #eef5fc
 		+sm
 			padding: 8px 6px
 			margin-left: 0
